# drf-api-permissions-postgres

movie_library/: db.sqlite3  pyproject.toml  requirements.txt
movie_library/movies/: models.py  urls.py
movie_library/movies/api/: permissions.py  serializers.py  veiwstes.py
movie_library/movies/migrations/: 0001_initial.py
movie_library/movies_library/: asgi.py  settings.py  urls.py  wsgi.py
